@@ -1,10 +1,10 @@
 /*
  * Hibernate, Relational Persistence for Idiomatic Java
  *
- * Copyright (c) 2008, Red Hat Middleware LLC or third-party contributors as
+ * Copyright (c) 2008-2011, Red Hat Inc. or third-party contributors as
  * indicated by the @author tags or express copyright attribution
  * statements applied by the authors.  All third-party contributions are
- * distributed under license by Red Hat Middleware LLC.
+ * distributed under license by Red Hat Inc.
  *
  * This copyrighted material is made available to anyone wishing to use, modify,
  * copy, or redistribute it subject to the terms and conditions of the GNU
@@ -20,7 +20,6 @@
  * Free Software Foundation, Inc.
  * 51 Franklin Street, Fifth Floor
  * Boston, MA  02110-1301  USA
- *
  */
 package org.hibernate.dialect;
 import java.lang.reflect.InvocationHandler;
@@ -31,10 +30,9 @@ import java.sql.DatabaseMetaData;
 import java.sql.SQLException;
 
 /**
- * TODO : javadoc
- *
  * @author Steve Ebersole
  */
+@SuppressWarnings( {"UnnecessaryBoxing"})
 public class Mocks {
 
 	public static Connection createConnection(String dbName, int version) {
@@ -77,7 +75,7 @@ public class Mocks {
 			}
 
 			if ( "hashCode".equals( methodName ) ) {
-				return new Integer( this.hashCode() );
+				return Integer.valueOf( this.hashCode() );
 			}
 
 			if ( canThrowSQLException( method ) ) {
@@ -111,7 +109,7 @@ public class Mocks {
 			}
 
 			if ( "getDatabaseMajorVersion".equals( methodName ) ) {
-				return new Integer( majorVersion );
+				return Integer.valueOf( majorVersion );
 			}
 
 			if ( "getConnection".equals( methodName ) ) {
@@ -137,8 +135,8 @@ public class Mocks {
 
 	private static boolean canThrowSQLException(Method method) {
 		final Class[] exceptions = method.getExceptionTypes();
-		for ( int i = 0; i < exceptions.length; i++ ) {
-			if ( SQLException.class.isAssignableFrom( exceptions[i] ) ) {
+		for ( Class exceptionType : exceptions ) {
+			if ( SQLException.class.isAssignableFrom( exceptionType ) ) {
 				return true;
 			}
 		}
